<resources>
    <string name="app_name">Flow</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up">Sign Up</string>
    <string name="type_your_full_name">Type your Full Name</string>
    <string name="full_name">Full Name</string>
    <string name="type_your_preferred_name">Type your Preferred Name</string>
    <string name="nickname">NickName</string>
    <string name="type_your_email">Type your email</string>
    <string name="email">Email</string>
    <string name="type_your_password">Type your password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="later">I want to register later!</string>
</resources>
